2003-07-22  James Henstridge  <james@daa.com.au>

	* gtk/gtktreeview.override: wrappers for tree model drag
	source/dest functions from Emmanuele Bassi (bug #116133).

	* gtk/gtktreeview.override (_wrap_gtk_tree_model_rows_reordered):
	add wrapper (from Arjan J. Molenaar, bug #116005).

	* gtk/Makefile.am: fix a bug I introduced into the makefile
	yesterday, and fix dependencies for gtk.c.

2003-07-20  John Finlay  <finlay@moeraki.com>

	* gtk/gdk.override (gdk_window_new) Wrap gdk_window_new as a
	constructor for gtk.gdk.Window(). Fixes #117860.

2003-07-20  James Henstridge  <james@daa.com.au>

	* gtk/Makefile.am: same here.

	* Makefile.am: change *module.so to *.so.  Seems to be the
	preferred extension these days ...

2003-07-12  John Finlay  <finlay@moeraki.com>

	* pango.override (_wrap_PANGO_ASCENT, _wrap_PANGO_DESCENT)
	(_wrap_PANGO_LBEARING, _wrap_PANGO_RBEARING)
	Add these function overrides. Fixes #116920.

	* pango.defs (PIXELS, ASCENT, DESCENT, LBEARING, RBEARING)
	Add defs for these. Fixes #116920.

	* pangomodule.c (initpango) Add pango.SCALE constant. Fixes #116920.

	* pango.override (PangoAttrIterator) Add this type and its methods.

2003-07-11  John Finlay  <finlay@moeraki.com>

	* pango.override (pypango_attr_new) Add start and end args to specify
	start_index and end_index values.
	(pypango_attr_copy) Specify copying start_index and end_index.
	(_wrap_pango_attr_*_new) Allow the pango.Attr* functions to optionally
	specify	start_index and end_index values. Fixes #116776.

	* pango.override (pypango_attr_tp_getattr)
	(pypango_attr_get_type) Add these to provide pango.Attribute type
	information and access to attribute type specific data. Fixes #116691.

	* pango.defs (pango_color_parse) Make this a constructor for
	pango.Color. Fixes #116662.

	* pango.override (_wrap_pango_color_parse) Add constructor wrapper.
	Fixes #116662.

	* gtk/gtk.defs (gtk_tree_model_sort_convert_iter_to_child_iter)
	Allow sort_iter to be NULL. Fixes #113097