@@ -1,5 +1,8 @@
 2003-07-22  James Henstridge  <james@daa.com.au>
 
+	* codegen/scmexpr.py (parse): print a real error if we find a
+	string or identifier outside of a s-expression (bug #104311).
+
 	* gtk/gtktreeview.override: wrappers for tree model drag
 	source/dest functions from Emmanuele Bassi (bug #116133).
 
